ISSUE #422 - Fix memory /4 and change to SERVER_VARS

--- a/pug/frontend.pug
+++ b/pug/frontend.pug
@@ -18,7 +18,7 @@ html(lang="en")
 		link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic")
 
 		script.
-			_PUG_VARS = {
+			SERVER_VARS = {
 				structure: !{structure},
 				parentStateJSON: !{parentStateJSON},
 				uiState: !{uistate}
