--- a/frontend/components/account/pug/account-teamspaces.pug
+++ b/frontend/components/account/pug/account-teamspaces.pug
@@ -11,7 +11,7 @@
 				md-progress-circular
 				h4 Loading...
 
-			account-models(
+			account-items(
 				ng-if="!vm.loading"
 				account="vm.account"
 				accounts="vm.accounts"
