--- a/frontend/components/account/pug/account.pug
+++ b/frontend/components/account/pug/account.pug
@@ -52,7 +52,7 @@ div(ng-if="!vm.state.model")
 				show-page="vm.showPage(page, callingPage)"
 				subscriptions="vm.subscriptions")
 
-			account-modelsetting(
+			account-itemsetting(
 				ng-switch-when="modelsetting"
 				account="vm.account"
 				model="vm.model"
