--- a/frontend/components/revisions/pug/revisions-dialog.pug
+++ b/frontend/components/revisions/pug/revisions-dialog.pug
@@ -6,23 +6,9 @@ md-dialog.revisionsDialog(aria-label="Revisions")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-list
-		//md-list-item(
-			ng-repeat="rev in vm.revisions"
-			ng-click="vm.goToRevision(rev.tag || rev._id, rev.current)"
-			ng-class="rev.current ? 'current' : ''")
-			.revision-item
-				.revision-first-row
-					.revision-name-and-author
-						.revision(ng-if="rev.tag") {{rev.tag}}
-							span.current(ng-if="rev.current") (current revision)
-						.revision(ng-if="!rev.tag") {{rev._id}}
-							span.current(ng-if="rev.current") (current revision)
-						.author {{rev.author}}
-					.timestamp {{rev.timestamp | revisionDate }}
-				.desc {{rev.desc}}
-			md-divider
 
 		md-list-item(
+			ng-if="vm.revisions.length"
 			ng-repeat="rev in vm.revisions"
 			ng-click="vm.goToRevision(rev.tag || rev._id, rev.current)"
 			ng-class="rev.current ? 'current' : ''")
@@ -36,5 +22,9 @@ md-dialog.revisionsDialog(aria-label="Revisions")
 					p {{rev.timestamp | revisionDate }}
 				.revisionsDialogInfo(layout="row", layout-align="space-between", flex)
 					p {{rev.desc}}
+
+		div(ng-if="vm.revisions.length === 0" 
+			layout-align="center center")
+			h3 No Revisions Present
 
 			md-divider
