ISSUE #394 - Fix issues with signup/components not being cleaned up

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -37,6 +37,10 @@ account-dir .userContent .cardInfo {
 }
 
 /** Account Models **************************************************************************************************/
+account-items .md-button {
+  z-index: 1 !important;
+}
+
 account-items #accountList {
   overflow: auto;
 }
