--- a/frontend/components/account/pug/account-assign.pug
+++ b/frontend/components/account/pug/account-assign.pug
@@ -4,19 +4,22 @@
 			.md-toolbar-tools
 				h2 Assign Permissions
 
-		md-tabs(md-dynamic-height, md-border-bottom, md-selected="vm.selectedIndex")
+		md-tabs(md-dynamic-height, md-border-bottom, md-selected="vm.selectedIndex", ng-click="vm.resetState()")
 			md-tab(label="Teamspace")
-				div.assignTabHolder.loadingHolder(layout="row" ng-if="vm.loading")
+				div.assignTabHolder.loadingHolder(layout="row" ng-if="vm.loadingTeamspaces")
 					md-progress-circular.loading
 					h3 Loading Teamspace Data...
 
-				div.assignTabHolder(layout="column" ng-if="!vm.loading", flex="100")
+				div.assignTabHolder(layout="column" ng-if="!vm.loadingTeamspaces", flex="100")
 
 					div(flex="100")
 						md-label Select Teamspace
-						md-select(ng-model="vm.teamspaceSelected", ng-required="true")
-							md-option(ng-repeat="teamspace in vm.teamspaces", value="{{teamspace.account}}") {{teamspace.account}}
-					
+						md-select(aria-label="Select Teamspace" ng-model="vm.teamspaceSelected", ng-required="true")
+							md-option(
+								aria-label="{{teamspace.account}}" 
+								ng-repeat="teamspace in vm.teamspaces"
+								value="{{teamspace.account}}") {{teamspace.account}}
+
 					md-card
 						table.scrollable.checkboxes(
 							ng-if="vm.teamspaceSelected"
@@ -25,7 +28,7 @@
 							thead(layout="row")
 								tr: th.userColumn User
 								tr(ng-repeat="(permission, value) in vm.teamspacePermissions", layout-align="center center"): th {{value}}
-							
+
 							tbody(layout="column")
 								tr(
 									layout-align="center center", 
@@ -42,7 +45,7 @@
 											ng-checked="vm.userHasPermissions(user, permission)")
 
 
-			md-tab(label="Project")
+			md-tab(label="Project", ng-click="vm.resetState()")
 				div.assignTabHolder.loadingHolder(layout="row" ng-if="vm.projectsLoading")
 					md-progress-circular.loading
 					h3 Loading Teamspace Data...
@@ -52,13 +55,20 @@
 					div(layout="row")
 						div(flex="50", layout="column")
 							md-label Select Teamspace
-							md-select.rowSelects(ng-model="vm.teamspaceSelected", ng-required="true")
-								md-option(ng-repeat="teamspace in vm.teamspaces", value="{{teamspace.account}}") {{teamspace.account}}
+							md-select.rowSelects(aria-label="Select Teamspace" ng-model="vm.teamspaceSelected", ng-required="true")
+								md-option(
+									aria-label="{{teamspace.account}}" 
+									ng-repeat="teamspace in vm.teamspaces"
+									value="{{teamspace.account}}") {{teamspace.account}}
+
 						div(flex="50", layout="column", ng-disabled="!vm.teamspaceSelected")
 							md-label Select Project
-							md-select.rowSelects(ng-model="vm.projectSelected", ng-required="true")
-								md-option(ng-repeat="project in vm.projects", value="{{project.name}}") {{project.name}}
-					
+							md-select.rowSelects(aria-label="Select Project" ng-model="vm.projectSelected", ng-required="true")
+								md-option(
+									aria-label="{{project.name}}" 
+									ng-repeat="project in vm.projects"
+									value="{{project.name}}") {{project.name}}
+
 					h3(ng-if="!vm.modelReady")
 
 					md-card
@@ -71,7 +81,7 @@
 									th.userColumn User
 									th(ng-repeat="(permission, value) in vm.projectPermissions"
 										layout-align="center center") {{value}}
-							
+
 							tbody(layout="column")
 								tr(
 									layout-align="center center", 
@@ -90,12 +100,12 @@
 											ng-checked="vm.userHasProjectPermissions(user, permission)")
 
 
-			md-tab(label="Models & Federations")
-				div.assignTabHolder.loadingHolder(layout="row", ng-if="vm.loading || vm.projectsLoading || (vm.isFromUrl && !vm.modelReady)")
+			md-tab(label="Models & Federations", ng-click="vm.resetState()")
+				div.assignTabHolder.loadingHolder(layout="row", ng-if="(!vm.isFromUrl && vm.loadingTeamspaces && vm.projectsLoading) || (vm.isFromUrl && !vm.modelReady)")
 					md-progress-circular.loading
 					h3 Loading Teamspace Data...
 
-				div.assignTabHolder(layout="column", ng-if="(!vm.isFromUrl && !vm.loading && !vm.projectsLoading) || (vm.isFromUrl && vm.modelReady)", flex="100")
+				div.assignTabHolder(layout="column", ng-if="(!vm.isFromUrl && !vm.loadingTeamspaces && !vm.projectsLoading) || (vm.isFromUrl && vm.modelReady)", flex="100")
 					div(layout="row")
 						div(flex="33", layout="column")
 							md-label Select Teamspace
@@ -103,28 +113,35 @@
 								aria-label="Selection for Teamspace"
 								ng-model="vm.teamspaceSelected"
 								ng-required="true")
-								md-option(ng-repeat="teamspace in vm.teamspaces", value="{{teamspace.account}}") {{teamspace.account}}
+								md-option(
+									aria-label="{{teamspace.account}}" 
+									ng-repeat="teamspace in vm.teamspaces"
+									value="{{teamspace.account}}") {{teamspace.account}}
 
 						div(flex="33", layout="column")
-							md-label(ng-if="vm.projectReady") Select Project
-							md-label(ng-if="!vm.projectReady") Awaiting Project...
+							md-label Select Project
 							md-select.rowSelects(
 								aria-label="Selection for Project"
 								ng-model="vm.projectSelected"
-								ng-disabled="!vm.projectReady"
 								ng-required="true")
-								md-option(ng-repeat="project in vm.projects", value="{{project.name}}") {{project.name}}
+								md-option(
+									aria-label="{{project.name}}" 
+									ng-repeat="project in vm.projects"
+									value="{{project.name}}") {{project.name}}
 
 						div(flex="33", layout="column")
-							md-label(ng-if="vm.modelsAreLoaded()") Select Model / Federation
-							md-label(ng-if="!vm.modelsAreLoaded()") Awaiting Models / Federations...
+							md-label(ng-if="vm.modelsLoaded()") Select Model / Federation
+							md-label(ng-if="!vm.modelsLoaded()") Awaiting Models / Federations...
 							md-select.rowSelects(
 								aria-label="Selection for Model"
 								ng-model="vm.modelSelected"
 								ng-required="true" 
-								ng-disabled="!vm.modelsAreLoaded()")
-								md-option(ng-repeat="(id, model) in vm.models", value="{{id}}") {{model.name}}
-					
+								ng-disabled="!vm.models || !vm.modelsLoaded()")
+								md-option(
+									aria-label="{{model.name}}" 
+									ng-repeat="model in vm.models"
+									value="{{model.model}}") {{model.name}}
+
 					md-card
 						table.scrollable.radiobuttons(
 							ng-if="vm.modelSelected && vm.modelReady"
@@ -133,7 +150,7 @@
 							thead(layout="row")
 								tr: th.fixedWidth.userColumn User
 								tr(ng-repeat="value in vm.modelRoles", layout-align="center center"): th.fixedWidth {{value}}
-							
+
 							tbody(layout="column", ng-if="vm.selectedModel && vm.modelReady")
 								tr(
 									layout-align="center center", 
@@ -145,7 +162,11 @@
 										p {{user.assignedUser}}
 
 									td.fixedWidth(ng-repeat="value in vm.modelRoles", layout-align="center center")
-										md-radio-group(ng-model="vm.selectedRole[user.assignedUser]", layout-align="center center", layout="row")
+										md-radio-group(
+											ng-model="vm.selectedRole[user.assignedUser]"
+											layout-align="center center"
+											layout="row")
+
 											md-radio-button(
 												aria-label="{{value}}"
 												ng-click="vm.modelStateChange(user, value)"
