--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -88,6 +88,7 @@
 										
 										account-federations(
 											federation="federation"
+											federations-saving="vm.federationsSaving"
 											project="project"
 											account="account"
 											is-saving="vm.isSaving"
