--- a/frontend/components/issues/pug/issues-list.pug
+++ b/frontend/components/issues/pug/issues-list.pug
@@ -11,7 +11,10 @@
 
 			.issueJustClosed(ng-if="issue.justClosed" flex="none")
 				.closedText This issue is now closed
-			issues-list-item(data="issue", user-job="vm.userJob")
+			issues-list-item(
+				ng-disabled="!vm.modelLoaded"
+				data="issue"
+				user-job="vm.userJob")
 
 			md-divider
 
