--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -12,7 +12,7 @@ account-dir #logo {
 }
 
 account-dir #noAvatarIcon {
-  background: rgba(0,69,148,.1);
+  background: rgba(250,250,250,1);
   height: 150px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1)
 }
