--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -92,7 +92,7 @@ home .homeUserContent md-tabs-wrapper {
 .cardInfo {
     text-align: center;
     padding: 15px;
-    background: rgba(0,69,148,.1);
+    background: rgba(250,250,250,1);
     margin: 15px;
     border-radius: 4px;
 }
