--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -153,7 +153,7 @@ issues-list .issueListItem *:hover {
 }
 
 issues-list .issueListItemFocus {
-  background: rgba(0,69,148,.1);
+  background: rgba(250,250,250,1);
 }
 
 issues-list .issueListItem div:first-child {
@@ -209,7 +209,7 @@ issues-list .issueListItemThumbnail {
   margin-right: 10px;
   height: 120px;
   width: 120px;
-  background: rgba(0, 69, 148, 0.2);
+  background: rgba(240,240,240,1)
 }
 
 issues-list #issuesListContainer {
@@ -234,7 +234,7 @@ issues-list .closedText{
 
 /** Issues List Item **************************************************************************************************/
 .userRoleIssueListItemTitle {
-  border: 1px solid rgba(0, 69, 148, 0.3);
+  border: 1px solid rgba(240,240,240,1);
   margin-left: -4px;
   padding-left: 4px;
 }
@@ -273,7 +273,7 @@ issue #issueeArea {
   outline: none;
 }
 issue .issueTitleArea:hover {
-  background: rgba(0,69,148,.1);
+  background: rgba(250,250,250,1);
   cursor: pointer;
 }
 issue .issueTitleArea #issueTitle {
@@ -384,7 +384,7 @@ issue #issueDescription label {
 
 issue .issueComment:hover,
 issue #issueDescription:hover {
-  background: rgba(0,69,148,.1);
+  background: rgba(250,250,250,1);
   cursor: pointer;
 }
 issue .issueComment *:hover,
