--- a/frontend/components/tree/css/tree.css
+++ b/frontend/components/tree/css/tree.css
@@ -38,7 +38,7 @@ tree .treeNode {
 }
 tree .treeNode:hover {
   cursor: pointer;
-  background: rgba(0,69,148,.1);
+  background: rgba(250,250,250,1);
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
 }
