--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -47,11 +47,11 @@ account-items #accountList {
 
 account-items .no-federations {
   padding-left: 43px;
-  color: rgb(67, 160, 71);
+  color: rgb(0,150,105);
 }
 
 account-items .md-list-item-text {
-  color: rgb(67, 160, 71);
+  color: rgb(0,150,105);
 }
 
 account-items md-list {
@@ -74,7 +74,7 @@ account-items .tree-node:hover{
 }
 
 account-items .projectName {
-  color: #4CAF50;
+  color: rgb(0,150,105);
 }
 
 account-items md-list-item.tree-node > div {
@@ -87,7 +87,7 @@ account-items .tree-branch {
 
 account-items .models .modelName,
 account-items .models md-icon {
-  color: #4CAF50;
+  color: rgb(0,150,105);
 }
 account-items .models md-icon {
   margin: 0 !important;
