--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -22,5 +22,5 @@ div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
 				account='vm.state.account'
 				state='vm.state'
 				query='vm.query'
-				ng-if="vm.isLoggedIn()"
+				ng-if="vm.sendLoginRequest()"
 				keys-down="vm.keysDown")
