--- a/pug/refund.pug
+++ b/pug/refund.pug
@@ -54,7 +54,7 @@ html(lang="en" ng-app="3drepo")
 							//span(flex)
 							//md-button.md-raised.md-accent.noPrint(ng-click="vm.print()") Print
 
-						#billingGap1
+						#billingGap
 
 						.billingInfoTitle(layout="row", flex="none", class="billingInfoTitle layout-row flex-none")
 							label(flex="30", class="flex-30") To
