--- a/frontend/components/billing/pug/billing.pug
+++ b/frontend/components/billing/pug/billing.pug
@@ -33,7 +33,7 @@ div(layout-fill, layout="column")
 				//span(flex)
 				//md-button.md-raised.md-accent.noPrint(ng-click="vm.print()") Print
 
-			#billingGap1
+			#billingGap
 
 			.billingInfoTitle(layout="row", flex="none")
 				label(flex="30") To
